post: Add managing data and file system with DBMS for database

--- a/_posts/knou/2021-04-15-database.markdown
+++ b/_posts/knou/2021-04-15-database.markdown
@@ -23,11 +23,11 @@ image-source: https://unsplash.com/photos/Q9y3LRuuxmg
 4. [SQL 1](#4-sql-1)
 5. [SQL 2](#5-sql-2)
 6. [SQL 3](#6-sql-3)
-7. [](#)
-8. [](#)
-9. [](#)
-10. [](#)
-11. [](#)
+7. [정규화](#7-정규화)
+8. [연습문제 풀이01](#8-연습문제-풀이01)
+9. [데이터 저장과 파일](#9-데이터-저장과-파일)
+10. [인덱싱](#10-인덱싱)
+11. [해싱과 특수 인덱스](#11-해싱과-특수-인덱스)
 12. [](#)
 13. [](#)
 14. [](#)
@@ -559,3 +559,244 @@ DROP TABLE 교수
 
 <br>
 ## 6. SQL 3
+
+<br>
+## 7. 정규화
+
+<br>
+## 8. 연습문제 풀이01
+
+<br>
+## 9. 데이터 저장과 파일
+
+DBMS는 데이터의 물리적 저장방식을 **고도로 추상화하여 제공**하기 때문에 사용자 및 개발자는
+인터페이스 혹은 논리적 비절차 언어를 활용하기만 하면 되었습니다.
+하지만 **DBA의 관점에서는 데이터가 물리적으로 어떻게 저장되는 것이 효율적인가에 대해서도 고려**해야 합니다.
+
+이번 장에서는 DBMS가 활용하는 컴퓨터 시스템(저장장치, OS)의 물리적 저장장치 계층 구조,
+물리적 데이터 파일의 구성 및 저장장치 접근 기법, 관리에 대해 살펴봅니다.
+
+---
+
+#### 9.1 물리적 저장장치
+
+컴퓨터 시스템의 물리적 저장장치는 데이터 접근 속도, 용량을 기준으로 다양한 장치로 구성됩니다.
+
+#### 물리적 저장장치의 구성
+
+![physical disc01](https://user-images.githubusercontent.com/33562226/54992343-6c618d80-5002-11e9-96d1-17b9c7bb25df.png)
+<small>이미지 출처: [chogyujin 블로그](https://chogyujin.github.io/2019/03/26/2.8-%EC%A0%80%EC%9E%A5-%EC%9E%A5%EC%B9%98%EC%9D%98-%EA%B3%84%EC%B8%B5-%EA%B5%AC%EC%A1%B0/)</small>
+
+각 저장장치의 특성은 다음과 같습니다.
+
+- 휘발성
+    - **캐시**: 고비용, 빠른 접근 속도
+    - **메인 메모리**: 실제 프로그램과 데이터 적재
+- 비휘발성
+    - **플래쉬 메모리**: 메인 메모리와 유사하나 비휘발성
+    - **자기 디스크**: 데이터베이스 전체를 안정적으로 저장
+    - **광학 디스크 드라이브**: CD, DVD, Blue-ray 등
+    - **테이프 장치**: 용량이 크고 저렴하나 순차 접근 방식으로 속도가 매우 느림
+
+---
+
+#### 9.2 파일
+
+여러 계층으로 구성된 컴퓨터 저장장치에서 DBMS는 어떻게 데이터를 물리적으로 저장하고 관리할까요?
+바로 파일시스템입니다.
+
+물리적 차원에서 DBMS는 OS의 파일시스템에 맞게 파일 단위로 데이터를 관리합니다.
+
+#### 물리적 저장장치
+
+사실 저장장치의 측면에서 파일 자체도 논리적 개념입니다.
+파일 내 데이터는 물리적 저장장치에 저장될 때 가장 작은 **블럭**이라는 데이터 묶음 단위로 나뉘어서 저장됩니다.
+그리고 이 블럭은 릴레이션의 레코드들로 구성되어 있습니다.
+
+![physical disc02](https://t1.daumcdn.net/cfile/tistory/2721404F56E2CEB41B)
+<small>이미지 출처: [firewall 티스토리 블로그](https://firewall.tistory.com/46)</small>
+
+- **파일**: 데이터를 영구적으로 저장하기 위해 사용되는 가장 기초적인 논리적 구조
+- **블럭**
+    - 파일을 고정적인 길이로 분할하여 생기는 균등한 크기의 데이터 묶음
+    - 일반적으로 메모리와 디스크 간 데이터 전송 단위로 결정
+- **레코드**
+    - 블럭을 구성하는 요소
+    - 더 이상 분리될 수 없는 최소 데이터 저장 단위
+
+#### 파일의 구성
+
+그렇다면 하나의 블럭에는 데이터가 어떻게 저장될까요?
+방금 레코드라고 이야기했는데, 레코드에는 **고정 길이 레코드**와 **가변 길이 레코드**가 있습니다.
+
+- **고정 길이 레코드**
+    - 한 릴레이션의 모든 레코드가 고정적인 바이트 수를 갖음
+    - [사번 릴레이션 - 레코드] 사번-CHAR(8), 이름-CHAR(20), 부서명-CHAR(10), 연봉-INT
+    - 위 사번 릴레이션의 한 레코드는 **8+20+10+4 = 42byte 의 고정 길이**를 갖음
+    - 데이터 접근
+        - 각 레코드는 42byte 고정 크기이므로,
+        - i번째 레코드 접근(0, 43, 85, ...) >> **(i - 1) * 42 + 1**
+    - 잔여 고정 길이 레코드는?
+        - 1) 마지막 레코드의 잔여 공간을 비워두는 방법
+            - 간편하지만, 블럭 내 잔여공간이 남음
+        - 2) 마지막 레코드의 잔여 공간에 다음 블럭의 첫 번째 레코드를 나누어 저장하는 방법
+            - 잔여공간이 발생하지 않음
+            - 다음 블럭의 첫 번째 레코드 접근 시 두 블럭에 접근해야 함
+            - 두 블럭 접근시에는 읽는 속도가 상대적으로 느려짐
+
+고정 길이 레코드 방식은 위와 같은 특징이 있습니다.
+주목할 부분은 데이터를 장기적으로 운용하면서 수정, 삭제 작업이 지속적으로 발생시 어떤 현상이 일어나는가입니다.
+
+특히 삭제 시에는 삭제 후 중간 공간이 비워지지만 그것을 모두 알 수는 없기 때문에 장기적으로 저장 공간 낭비가 누적됩니다.
+
+- 레코드 삭제 대처
+    - 1) 삭제 시마다 마지막 레코드로 공백 대체 > 레코드의 순서가 달라져 검색 속도에 영향
+    - 2) 삭제 레코드 이후의 레코드를 이동 > 순서성에 영향은 없지만 데이터 이동으로 인한 비용이 많음(이후 레코드 많을수록)
+    - 3) 가용 리스트 관리
+        - 파일 헤더에 공백 레코드 포인터(연결 리스트 방식)를 두어 빈 공간을 표시
+        - 삽입시 빈 공간에 데이터를 넣고 포인터 변경
+
+이제 가변 길이 레코드를 살펴봅시다.
+가변적인 여러 레코드를 한 블럭에 저장하기 위하여 현존하는 가장 효율적인 방법은 **슬롯 페이지 구조**입니다.
+
+- **가변 길이 레코드**
+    - 한 블럭에 서로 다른 길이의 레코드 저장(가변적, 여러 릴레이션 등)
+    - 상황
+        - 한 블럭 내에 저장되는 레코드 유형이 둘 이상
+        - 길이가 고정되지 않은 컬럼의 개수가 하나 이상(VARCHAR 등)
+        - 레코드가 멀티셋을 허용한 컬럼을 가질 때
+    > 멀티셋
+    >> 레코드의 컬럼값이 여러 개인 컬럼
+    - [사번 릴레이션 - 레코드] 사번-CHAR(8), 이름-VARCHAR(20), 부서명-CHAR(10), 연봉-INT
+    - 레코드의 맨 앞 4byte에 가변 길이 컬럼의 정보 표시
+    - 가변 길이 컬럼까지 가서는 앞에 null 값을 삽입
+    ![가변길이레코드01](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http%3A%2F%2Fcfile23.uf.tistory.com%2Fimage%2F994336405AFD9A880758BA)
+    <small>이미지 출처: [jundol 블로그](https://jundol.me/124)</small>
+
+가변 길이 레코드를 효율적으로 관리하기 위해 슬롯 페이지 구조가 사용됩니다.
+
+- **슬롯 페이지 구조**
+    - 기본적으로 가변 길이 레코드를 관리하려면 각 레코드의 시작과 끝 정보를 알고 있어야 함
+    - 블럭 헤더에 가변 레코드들의 정보를 기술 >> 레코드 개수, 가용공간의 끝 위치, 레코드 요약 정보, 링크 등등
+    ![가변길이레코드02](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http%3A%2F%2Fcfile30.uf.tistory.com%2Fimage%2F9950C93B5AFD9BC507861E)
+    <small>이미지 출처: [jundol 블로그](https://jundol.me/124)</small>
+    - 가용 공간의 끝에서부터 채워나가면서 잔여 가용 공간 정보를 확인
+
+가변 길이 레코드의 슬롯 페이지 구조에서 레코드 삭제에 대한 대응은 **삭제되어 빈 공간 이후의 레코드들을 이동시키는 방식**으로 이루어집니다.
+이러한 방식은 고정 길이 레코드에서는 이후 모든 레코드와 블럭에 대한 이동을 의미하기 때문에 너무 많은 비용이 소요되지만,
+가변 길이 레코드에서는 **해당 블럭 내의 레코드들만 이동**시키기 때문에 그렇게 많은 비용이 들지 않습니다.
+레코드 이동 이후 정보는 블럭 헤더에 반영됩니다.
+
+#### 파일 구조화
+
+이렇게 구성된 블럭들이 모여 파일을 구성합니다.
+
+그런데 가변 길이 레코드에서 보았듯이, 하나의 블럭에서는 여러 릴리에션의 다양한 길이의 레코드가 저장될 수 있고,
+반대로 하나의 릴레이션의 레코드들은 빈 공간을 찾아 여러 블럭에 걸쳐서 저장될 수 있습니다.
+
+**파일 구조화**는 파일 수준에서 릴레이션의 레코드를 관리(순서 등)하는 기법입니다.
+
+- 1) **힙(Heap) 파일 구조**: 저장 순서 고려 없이 파일 내 임의의 위치에 배치
+    - 저장 시 가장 빠르고 간편하지만 데이터 활용 시 가장 비효율적
+    - 임의의 블럭에 레코드를 저장했기 때문에 해당 값을 찾기 위해 모든 블럭을 메모리에 적재해 탐색해야 함
+- 2) **순차 파일 구조**: 레코드들이 탐색키 기준으로 정렬되어 저장(정렬키로써의 특정 컬럼)
+    - 예를 들어 사번 컬럼 순으로 정렬되어 저장
+    - 힙 파일 구조보다 저장 속도는 느리지만, 탐색 시 훨씬 빠름(이진 탐색 가능)
+- 3) **해시 파일 구조**: 사전에 정의된 해시 함수를 사용하여 저장될 블럭의 주소를 계산
+    - 해시 함수의 성능에 따라 저장 및 탐색의 효율성이 결정됨
+
+시스템에 최적화된 해시 함수를 적용할 수 있다면 해시 파일 구조가 가장 효율적이겠으나,
+일반적으로는 파일 구조화 시 탐색키를 활용하는 순차 파일 구조를 차용합니다.
+
+- **순차 파일 구조**의 특징
+    - 레코드가 검색키 순서대로 정렬(연결 리스트)
+    - 레코드가 파일에 삽입되는 시점에서 키 값이 부여됨
+    - 장점
+        - 검색키 정렬 연산 불필요(이미 정렬되어 저장), 키 값들의 순서로 레코드 판독 연산에 효율적
+        - 현재 레코드에서 정렬된 키 순서로 다음 레코드를 찾을 때 부가적인 블럭 접근이 불필요 > 같은 블럭 내에 있다는 보장이 있음
+        - 이진 탐색으로 빠른 레코드 탐색 가능
+    - 단점
+        - 레코드의 삽입, 삭제에 많은 비용 소요
+
+신규 삽입 시 순차 파일 구조의 단점을 개선하기 위해 **오버플로우 블럭**이 활용됩니다.
+
+- **오버플로우 블럭**
+    - 레코드 정렬의 순서성을 유지하며 삽입 시 이후 레코드들의 이동을 방지하기 위해 사용
+    - 새로운 오버플로우 블럭을 생성해 Linked List 방식으로 새 레코드 저장 및 연결
+    ![오버플로우 블럭01]({{ site.github.url }}{% link assets/post-img/overflow_block01.png %})
+    <small>이미지 출처: 9강 참조</small>
+
+---
+
+#### 9.3 저장장치 관리
+
+지금까지 DBMS가 물리적 저장장치에 데이터를 저장하고 관리하기 위해 사용하는 파일 구조에 대해 알아봤습니다.
+
+앞서 설명했듯 파일 자체는 저장장치의 관점에서 봤을 때 논리적 저장 객체입니다.
+실체 물리적 관점에서는 여러 개의 블럭으로 저장되며, 블럭은 고정적 혹은 가변적 형태의 레코드로 구성되어 있습니다.
+
+이러한 저장장치에 저장된 데이터에는 어떤 식으로 접근하게 될까요?
+가장 주목해야 할 점은 효율성과 속도입니다.
+
+#### 저장장치 접근
+
+우선 최소 단위인 블럭을 살펴봅시다.
+
+- 블럭
+    - 메모리와 디스크 간 데이터 전송 단위
+    - 일반적으로 2KB ~ 32KB 사용(보통 4KB)
+    - 블럭 전송을 최소화 할수록 입출력 소요 시간이 단축
+    - but, 메모리의 적재 공간은 한정적임을 고려
+
+프로그램에서 사용중인 메모리보다는 디스크의 읽기 속도가 더 느리기 때문에
+효율성의 측면에서는 디스크 읽기 횟수가 적을 수록, 메모리에 적재한 블럭의 활용 빈도가 높을수록 효율적입니다.
+
+하지만 메모리의 가용량은 한정적인 경우가 많으므로 한 번에 불필요하게 많은 데이터(블럭)을 읽어들이면 비효율적일 수 있습니다.
+따라서 적절한 크기의 블럭을 한 번에 읽어들여 여러 번 재사용 할수록 좋습니다.
+
+또한 적재된 블럭 중 사용되지 않는 블럭은 할당을 해제하고 새 블럭을 읽어들일 수도 있습니다.
+이러한 작업을 위해 DBMS는 **버퍼 관리자**를 두어 메모리 내부 버퍼 공간에 블럭을 적재 혹은 할당 해제하는 등의 관리를 수행합니다.
+
+#### 버퍼 관리자
+
+먼저 DBMS상의 소프트웨어는 필요한 블럭이 있을 때 버퍼 관리자에게 해당 블럭을 요청합니다.
+
+- 1) 버퍼 관리자는 해당 블럭이 버퍼(메모리)에 있다면 블럭이 위치한 주소를 프로그램에게 전달합니다.
+- 2) 요청한 블럭이 없다면 버퍼 내 새로운 공간을 할당하고 디스크로부터 해당 블럭을 적재합니다.
+- 3) 더 이상 적재할 공간이 없다면 버퍼 내 기존 블럭을 해제하고 새 블럭을 적재합니다.
+
+#### 버퍼 교체 전략
+
+교체 전략의 핵심은 위 세 번째 경우에서 할당을 해제할 기존 블럭을 선정하는 것입니다.
+가장 안 쓰일것 같은 블럭을 잘 선택하는게 관건이겠죠.
+
+- **버퍼 교체 전략**
+    - 미래에 가장 적게 사용될 블럭을 선택하는 것이 이상적
+    - 기법
+        - LRU(Least Recently Used): 최근에 가장 적게 참조된 블럭을 교체
+            - 버퍼 내 블럭들의 마지막 참조 시점을 기록
+        - MFU(Most Frequently Used): 특정 기간 동안 가장 여러번 사용된 블럭을 선택하여 교체
+            - 블럭이 몇 번 참조되었는지를 기록
+            - 가장 빈번한게 사용된 블럭은 미래에 재사용 가능성이 적을 것이라는 논리
+
+버퍼 교체 전략 중 가장 좋은 것은 없으므로 상황에 맞게 선정해야 합니다.
+경우에 따라 LFU(Least ~) 방식을 차용할 수도 있는 것입니다.
+
+#### 추가적인 관리 기법
+
+버퍼 관리자에 의해 블럭이 내보내지는 것을 방지하기 위해 고정해 두는 **고정 블럭**과
+내보내질것 같지는 않지만 강제로 내보내도록 하는 **블럭 강제 출력**이 있습니다.
+
+- 고정 블럭
+    - 프로그램 진행 중이어서 완성되지 않은 데이터가 디스크에 기록되는 것을 방지
+    - 혹은 예기치 못하게 중단되어 복구중인 작업의 블럭 결과물 기록 방지
+
+- 블럭 강제 출력
+    - 메모리의 휘발성의 특성으로 인해 급작스러운 상황을 대비해 데이터를 디스크에 저장하기 위해 메모리 버퍼 여유가 있더라도 강제 출력
+    - 시스템 로그, 계좌의 거래정보 등
+
+<br>
+## 10. 인덱싱
+
+<br>
+## 11. 해싱과 특수 인덱스
