--- a/_posts/lecture/2021-04-15-database.markdown
+++ b/_posts/lecture/2021-04-15-database.markdown
@@ -3,8 +3,8 @@ title:  "[방통대] 데이터베이스 수업 정리"
 created:   2021-03-20 14:42:24 +0900
 updated:   2021-04-15 11:58:15 +0900
 author: namu
-categories: knou
-permalink: "/knou/:year/:month/:day/:title"
+categories: lecture
+permalink: "/lecture/:year/:month/:day/:title"
 image: https://images.unsplash.com/photo-1569235186275-626cb53b83ce?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1952&q=80
 alt: database image
 image-view: true
